# ina219-cpp-driver

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
examples/arduino/: CMakeLists.txt  README.md
examples/arduino/src/: src.ino
examples/esp_idf/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/esp_idf/main/: CMakeLists.txt  main.cpp
examples/pico/: CMakeLists.txt  README.md
examples/pico/scripts/: flash.sh
examples/pico/src/: main.cpp
examples/pico_sdk/: CMakeLists.txt
examples/pico_sdk/src/: main.cpp
examples/stm32/: .mxproject  CMakeLists.txt  README.md  STM32U585xx_FLASH.ld  STM32U585xx_RAM.ld  stm32.ioc
examples/stm32/App/Inc/: ina219_example.hpp
examples/stm32/App/Src/: ina219_example.cpp
examples/stm32/Core/Inc/: stm32u5xx_hal_conf.h
examples/stm32/Core/Src/: i2c.c  main.c  usart.c
examples/stm32/cmake/: gcc-arm-none-eabi.cmake  starm-clang.cmake
examples/stm32/cmake/stm32cubemx/: CMakeLists.txt
include/ina219/: details.hpp  ina219.hpp
scripts/: build.sh
src/: ina219.cpp
